# burr_puzzle_wizard

./: .gitignore  CMakeLists.txt
res/puzzles/: Puzzle18.txt  Puzzle18_Half.txt  Puzzle18_Simple.txt  Puzzle18_Template.txt  Puzzle6.txt  Puzzle6_Empty.txt  Puzzle6_Template.txt
src/: application.cpp  application.h  burr_puzzle_solver.h  burr_puzzle_wizard.h  camera.cpp  camera.h  fmt.cpp  main.cpp  node.cpp  node.h  piece.h  utils.h
